# iu4-2k23-info

./: CMakeLists.txt  README.md
my_set/: CMakeLists.txt  main.c  set.c  set.h
oop/: CMakeLists.txt  main.c  main.h
oop/include/: compressor.h  rar_compressor.h  zip_compressor.h
oop/src/: rar_compressor.c  zip_compressor.c
sem01/: CMakeLists.txt  main.c
sem02/for_loop/: main.c
sem02/functions/: main.c
sem02/sign_of_number/: main.c
sem02/switch_case/: main.c
sem02/typecasting/: main.c
sem02/while_loop/: main.c
sem03/arguments/: main.c
sem03/array_matrices/: main.c
sem03/strings/: main.c
sem04/enum_directions/: main.c
sem04/factorial_recursion/: main.c
sem04/global_n_local_variables/: main.c
sem04/headers_structs_preprocessordirectives/inc/: definitions.h  util.h
sem04/headers_structs_preprocessordirectives/src/: main.c  util.c
sem05/function_pointers/: main.c
sem05/heap/: main.c
sem05/pointers/: main.c
